# x3plus_playground

./: .gitignore  README.md  x3plus_playground.repos
willowgarage/: CMakeLists.txt  README.md  package.xml
willowgarage/blender/: willowgarage.glb  willowgarage_collision.dae.blend  willowgarage_visual.dae.blend
willowgarage/blender/assets/materials/carpet_aaf85fad-103e-4477-a4c7-af8b6f09154e/: carpet_2K_abfc508f-b006-4f77-828e-292fd287df32.blend
willowgarage/docs/: floorplan2.pdn
willowgarage/launch/: view_willowgarage.launch  view_willowgarage.launch.py  willowgarage.launch  willowgarage.launch.py
willowgarage/meshes/: willowgarage-hd.glb  willowgarage.glb  willowgarage_collision.dae  willowgarage_collision.dae.glb  willowgarage_visual.dae
willowgarage/models/Chair_Sky/: model.config  model.sdf
willowgarage/models/Chair_Sky/meshes/: collision.glb  visual.glb
willowgarage/models/Willow_Garage/: model.config  model.sdf
willowgarage/models/Willow_Garage_DAE/: model.config
willowgarage/models/Willow_Garage_HD/: model.config  model.sdf
willowgarage/worlds/: willowgarage-hd.world  willowgarage.dae.world  willowgarage.world  world_common.sdf
x3plus_worlds/: CMakeLists.txt  package.xml
x3plus_worlds/config/: explore-params.yaml  willowgarage.rviz
x3plus_worlds/launch/: bringup.launch.py  willowgarage.launch.py
x3plus_worlds/launch/robots/: x3plus.launch.py
x3plus_worlds/launch/system/: simulation.launch.py
x3plus_worlds/launch/utils/: teleop.launch.py
x3plus_worlds/rviz/: explore_footprint.rviz  nav_footprint.rviz  nav_map.rviz
