<?xml version="1.0"?>
<package format="3">
  <name>willowgarage</name>
  <version>0.0.1</version>
  <description>
    package for WillowGarage world with multiple rooms and furniture for Gazebo simulations.
  </description>
  <maintainer email="cord.burmeister@live.de">marvin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- It is also good practice to add a dependency to ros2launch to the package.xml file of your package: -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
